--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.17"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/mongoose": "^5.10.3",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6"
   },
